--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-toast": "^1.1.5",
+		"@radix-ui/react-tooltip": "^1.0.7",
 		"@reduxjs/toolkit": "^2.2.2",
 		"breadcrumb": "^1.0.0",
 		"class-variance-authority": "^0.7.0",
@@ -31,10 +32,12 @@
 		"cmdk": "^1.0.0",
 		"lucide-react": "^0.363.0",
 		"react": "^18.2.0",
+		"react-code-blocks": "^0.1.6",
 		"react-dom": "^18.2.0",
 		"react-draggable": "^4.4.6",
 		"react-hook-form": "^7.51.1",
 		"react-redux": "^9.1.0",
+		"react-resizable-panels": "^2.0.16",
 		"react-router-dom": "^6.16.0",
 		"react-wrap-balancer": "^1.1.0",
 		"shadcn-ui": "^0.8.0",
