--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@radix-ui/react-toast": "^1.1.5",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@reduxjs/toolkit": "^2.2.2",
+		"@types/serialport": "^8.0.5",
 		"breadcrumb": "^1.0.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
