--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@types/node": "^20.8.4",
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
+		"@types/w3c-web-serial": "^1.0.6",
 		"@vitejs/plugin-react": "^2.1.0",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.31",
