--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"react-resizable-panels": "^2.0.16",
 		"react-router-dom": "^6.16.0",
 		"react-wrap-balancer": "^1.1.0",
+		"reactflow": "^11.11.1",
 		"shadcn-ui": "^0.8.0",
 		"socket.io-client": "^4.7.5",
 		"tailwind-merge": "^1.14.0",
