--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-	"name": "react-shadcn-starter",
+	"name": "cableundefined",
 	"private": true,
 	"version": "0.1",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
+		"start": "serve -s dist",
 		"build": "tsc && vite build",
 		"preview": "vite preview"
 	},
@@ -42,6 +43,7 @@
 		"react-router-dom": "^6.16.0",
 		"react-wrap-balancer": "^1.1.0",
 		"reactflow": "^11.11.1",
+		"serve": "^14.2.1",
 		"shadcn-ui": "^0.8.0",
 		"socket.io-client": "^4.7.5",
 		"tailwind-merge": "^1.14.0",
